cmake_minimum_required(VERSION 3.20)
project(courses_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_02_01 Lab_02/Lab_02_01.cpp)
add_executable(Lab_02_02 Lab_02/Lab_02_02.cpp)
add_executable(Lab_02_03 Lab_02/Lab_02_03.cpp)
add_executable(Lab_02_04 Lab_02/Lab_02_04.cpp)
add_executable(Lab_02_05 Lab_02/Lab_02_05.cpp)
add_executable(Lab_02_06 Lab_02/Lab_02_06.cpp)
add_executable(Lab_02_07 Lab_02/Lab_02_07.cpp)
add_executable(Lab_02_08 Lab_02/Lab_02_08.cpp)
add_executable(Lab_02_09 Lab_02/Lab_02_09.cpp)
add_executable(Lab_02_10 Lab_02/Lab_02_10.cpp)
add_executable(Lab_02_11 Lab_02/Lab_02_11.cpp)

add_executable(Lab_03_01 Lab_03/Lab_03_01.cpp)
add_executable(Lab_03_02 Lab_03/Lab_03_02.cpp)
add_executable(Lab_03_03 Lab_03/Lab_03_03.cpp)
add_executable(Lab_03_04 Lab_03/Lab_03_04.cpp)
add_executable(Lab_03_05 Lab_03/Lab_03_05.cpp)
add_executable(Lab_03_06 Lab_03/Lab_03_06.cpp)
add_executable(Lab_03_07 Lab_03/Lab_03_07.cpp)
add_executable(Lab_03_08 Lab_03/Lab_03_08.cpp)
add_executable(Lab_03_09 Lab_03/Lab_03_09.cpp)
add_executable(Lab_03_10 Lab_03/Lab_03_10.cpp)
add_executable(Lab_03_11 Lab_03/Lab_03_11.cpp)
add_executable(Lab_03_12 Lab_03/Lab_03_12.cpp)
